--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -3,6 +3,7 @@
   "Перевод": "Перевод",
   "Главная страница": "Главная страница",
   "Язык": "Русский",
+  "Короткий язык": "Ru",
   "новый перевод": "новый перевод",
   "Страница не найдена": "Страница не найдена",
   "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
