--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,5 +11,6 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
-  "Переключить": "Toggle"
+  "Переключить": "Toggle",
+  "Войти": "SignIn"
 }
