--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,5 +12,7 @@
   "Главная": "Main",
   "О сайте": "About us",
   "Переключить": "Toggle",
-  "Войти": "SignIn"
+  "Войти": "SignIn",
+  "инкремент": "increment",
+  "декремент": "decrement"
 }
