--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -13,6 +13,9 @@
   "О сайте": "О сайте",
   "Переключить": "Переключить",
   "Войти": "Войти",
+  "Выйти": "Выйти",
   "инкремент": "инкремент",
-  "декремент": "декремент"
+  "декремент": "декремент",
+  "Форма авторизации": "Форма авторизации",
+  "ошибка авторизации": "Вы ввели неверный логин или пароль!"
 }
