--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,6 +11,7 @@
   "throw error": "throw error",
   "Главная": "Main",
   "О сайте": "About us",
+  "Профиль": "Profile",
   "Переключить": "Toggle",
   "Войти": "SignIn",
   "Выйти": "SignOut",
