--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,6 +11,7 @@
   "throw error": "throw error",
   "Главная": "Главная",
   "О сайте": "О сайте",
+  "Профиль": "Профиль",
   "Переключить": "Переключить",
   "Войти": "Войти",
   "Выйти": "Выйти",
